--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>My First Page</title>
+  <title> Hoem page</title>
 </head>
 <body>
   <nav> </nav>
