--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title> Hoem page</title>
+  <title> Hoem page - change to be pushed to GitHub</title>
 </head>
 <body>
   <nav> </nav>
